# cardano-sl

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .hindent.yaml  .hlint.yaml  .nonsense  .stack-to-nix.cache  .stylish-haskell.yaml  .travis.yml  0001-Fix-dynamic-linking-on-macOS.patch  Bittrex wallet updrading  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cabal2201-SMP-test-fix.patch  Cabal2201-response-file-support.patch  Capture+.unzip  Daedalus.sh.example  DeployCluster.hs  HLint.hs  LICENSE  Main.hs  Makefile  NodeLowLevel.hs  QUEUE_METRICS.md  README.md  Thin.hs  appveyor.yml  b  benchnodes.yaml  bors.toml  bower.json  build.sh  cabal-exe-ext-8.4.2.patch  cabal.project  cabal.project.freeze  cardano-sl-explorer.cabal  cardano-sl.cabal  cardanopkgs.nix  (+89 more)
acid-state-exts/: .gitignore  .travis.yml  CHANGELOG.md  Notes on replication.txt  README.md  acid-state-exts.cabal
acid-state-exts/benchmarks/loading/: Benchmark.hs
acid-state-exts/examples/: CheckpointCutsEvent.hs  HelloDatabase.hs  HelloWorld.hs  HelloWorldNoTH.hs  KeyValue.hs  KeyValueNoTH.hs  Proxy.hs  RemoteClient.hs  RemoteCommon.hs  RemoteServer.hs  SlowCheckpoint.hs  StressTest.hs  StressTestNoTH.hs
acid-state-exts/src-unix/: FileIO.hs
acid-state-exts/src-win32/: FileIO.hs
acid-state-exts/src/Data/: AcidExts.hs
auxx/: Main.hs  Makefile  README.md  cardano-sl-auxx.cabal
auxx/src/: AuxxOptions.hs  BlockGen.hs  Command.hs  HashInstaller.hs  Lang.hs  Main.hs  Mode.hs  Plugin.hs  Repl.hs
auxx/test/: Test.hs
binary/: README.md  cardano-sl-binary.cabal  cardano-sl-binary.nix
binary/test/: cardano-sl-binary-test.cabal  cardano-sl-binary-test.nix  test.hs
block/: README.md  cardano-sl-block.cabal
block/bench/: Block.hs  cardano-sl-block-bench.cabal
block/test/: BlockSpec.hs  cardano-sl-block-test.cabal  test.hs
blockchain-importer/: CODEOWNERS  README.md  cardano-sl-explorer.cabal  log-config.yaml
blockchain-importer/bench/: Main.hs
blockchain-importer/frontend/: .gitignore  postcss.config.js
blockchain-importer/scripts/: build.sh  fetch_dependencies.sh
blockchain-importer/test/: Test.hs
cabal-merger/: Setup.hs  cabal-merger.cabal  cabal.nix  default.nix  mergeFiles.nix
cabal-merger/cabal-merger/: Main.hs
cabal-merger/cabal-to-snack/: Main.hs
cabal-merger/src/: Main.hs
chain/: Makefile  README.md  cardano-sl-chain.cabal  cardano-sl-chain.nix  shell.nix
chain/bench/: block-bench.hs
chain/test/: LICENSE  cardano-sl-chain-test.cabal  cardano-sl-chain-test.nix  test.hs
client/: Makefile  README.md  cardano-sl-client.cabal
client/test/: Test.hs
cluster/: LICENSE  README.md  cardano-sl-cluster.cabal
cluster/demo/: Main.hs
cluster/test/: Main.hs
core/: EtherCompat.hs  Makefile  README.md  cardano-sl-core.cabal  cardano-sl-core.nix  constants-dev.yaml  constants-prod.yaml  constants-wallet-prod.yaml  constants.yaml  default.nix  genesis-spec-bn.yaml  genesis-spec-dn.yaml  genesis-spec-tn.yaml
core/Pos/: Core.hs  Crypto.hs  Exception.hs  Merkle.hs
core/test/: Test.hs  cardano-sl-core-test.cabal  cardano-sl-core-test.nix  default.nix  test.hs
crypto/: README.md  cardano-sl-crypto.cabal  cardano-sl-crypto.nix  shell.nix
crypto/Pos/: Crypto.hs
crypto/test/: cardano-sl-crypto-test.cabal  cardano-sl-crypto-test.nix  test.hs
crypto/tests/: cardano-sl-crypto-test.cabal
db/: Makefile  Profiler.hs  README.md  RocksPeek.hs  cardano-sl-db.cabal  cardano-sl-db.nix  default.nix  shell.nix
db/Pos/: DB.hs
db/test/: cardano-sl-db-test.cabal  cardano-sl-db-test.nix  test.hs
delegation/: README.md  cardano-sl-delegation.cabal
delegation/test/: cardano-sl-delegation-test.cabal
demo/: README.md  cardano-sl-demo.cabal
demo/state-demo/: topology.yaml
explorer/: .gitignore  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  cardano-sl-explorer.cabal  default.nix  shell.nix  start-dev.sh  update_explorer_web_api_docs.sh
explorer/bench/: Main.hs
explorer/frontend/: ARCHITECTURE.md  README.md  bower.json  default.nix  nixpkgs  package.json  postcss.config.js  shell.nix  webpack.config.babel.js
explorer/python-api/: README.md  app.py  default.nix  setup.py
explorer/scripts/: fetch_dependencies.sh  generate_cabal2nix.sh  run.sh
explorer/test/: Test.hs
faucet/: LICENSE  cardano-sl-faucet.cabal  default.nix  existing-wallet-details.json  index.html  logging.cfg  shell.nix  test-config.json.template  wallet-source.json.template
faucet/frontend/: default.nix  index.html
faucet/server/: Main.hs
faucet/test/: Spec.hs  captcha-resp-err.json  captcha-resp-ok.json
generator/: Makefile  README.md  cardano-sl-generator.cabal
generator/app/: VerificationBench.hs
generator/bench/: Main.hs
generator/test/: Test.hs
godtossing/: cardano-sl-godtossing.cabal
infra/: Makefile  README.md  cardano-sl-infra.cabal  cardano-sl-infra.nix  default.nix  shell.nix
infra/Pos/: DHT.hs  KnownPeers.hs  Ntp.hs  NtpCheck.hs  Reporting.hs  Shutdown.hs  Slotting.hs  StateLock.hs  Statistics.hs  Subscription.hs
infra/test/: Spec.hs  cardano-sl-infra-test.cabal  cardano-sl-infra-test.nix  test.hs
installers/: Installer.hs  MacInstaller.hs  README.md  WindowsInstaller.hs  cardano-installer.cabal  stack.yaml
installers/data/: Distribution.xml
iserv-proxy-8.5/: default.nix  iserv-proxy.cabal
iserv-proxy-8.5/src/: Main.hs
lib/: LICENSE  Makefile  README.md  Setup.hs  cardano-sl.cabal  cardano-sl.nix  configuration.yaml  default.nix  mainnet-ci-genesis.json  mainnet-genesis-devnet-with-stakeholders.json  mainnet-genesis-dryrun-with-stakeholders.json  mainnet-genesis.json  mainnet-staging-short-epoch-genesis.json  shell.nix  shelley-staging-short-genesis.json  testnet-genesis.json  txSigning.html
lib/test/: Test.hs
libiserv-8.5/: default.nix  libiserv.cabal
libiserv-8.5/src/: Lib.hs
lrc/: README.md  cardano-sl-lrc.cabal  default.nix
lrc/test/: cardano-sl-lrc-test.cabal
lwallet/: Command.hs  Main.hs  WalletOptions.hs  cardano-sl-lwallet.cabal
mnemonic/: README.md  cardano-sl-mnemonic.cabal
mnemonic/generate-mnemonic/: Main.hs
mnemonic/test/: Main.hs
(+5975 files in other folders)
