name:                cardano-sl-explorer
version:             0.0.1.0
synopsis:            Cardano SL main implementation
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag asserts
  default: True
  manual: True

flag dev-mode
  default:     True
  manual:      True

  description: Switch between Development and Production mode

library
  exposed-modules:      Pos.Explorer.Web
                        Pos.Explorer.Web.ClientTypes
                        Pos.Explorer.Web.Error
                        Pos.Explorer.Web.Sockets
  other-modules:        Pos.Explorer.Aeson.ClientTypes

                        Pos.Explorer.Web.Sockets.App
                        Pos.Explorer.Web.Sockets.Instances
                        Pos.Explorer.Web.Sockets.Holder
                        Pos.Explorer.Web.Sockets.Methods
                        Pos.Explorer.Web.Sockets.Util

                        Pos.Explorer.Web.Server
                        Pos.Explorer.Web.Transform
                        Pos.Explorer.Web.Api
  build-depends:        base
                      , aeson
                      , binary
                      , bytestring
                      , base16-bytestring
                      , cardano-sl
                      , engine-io
                      , engine-io-snap
                      , exceptions
                      , formatting
                      , lens
                      , log-warper
                      , mtl
                      , monad-loops
                      , node-sketch
                      , serokell-util
                      , servant
                      , servant-server
                      , socket-io
                      , snap-core
                      , snap-server
                      , engine-io-wai
                      , stm
                      , text-format
                      , text
                      , time
                      , time-units
                      , transformers
                      , universum
                      , wai
                      , containers
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if flag(asserts)
    cpp-options: -DASSERTS_ON
  if flag(dev-mode)
    cpp-options: -DDEV_MODE

executable cardano-explorer
  hs-source-dirs:      src/explorer
  main-is:             Main.hs
  other-modules:       ExplorerOptions
  build-depends:       base
                     , cardano-sl
                     , cardano-sl-explorer
                     , optparse-simple
                     , universum
                     , serokell-util
                     , log-warper
                     , node-sketch
                     , lens
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if flag(dev-mode)
    cpp-options: -DDEV_MODE

executable cardano-explorer-hs2purs
  hs-source-dirs:      src/purescript
  main-is:             Main.hs
  other-modules:       PSTypes
                       PSOptions
  build-depends:       base
                     , cardano-sl
                     , cardano-sl-explorer
                     , purescript-bridge
                     , universum
                     , optparse-simple
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
