name:                cardano-sl-explorer
version:             0.0.4.0
synopsis:            Cardano explorer
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          IOHK <hi@serokell.io>
copyright:           2017 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag asserts
  default: True
  manual: True

flag dev-mode
  default:     True
  manual:      True

  description: Switch between Development and Production mode

library
  exposed-modules:      Pos.Explorer.Socket
                        Pos.Explorer.Web
                        Pos.Explorer.Web.ClientTypes
                        Pos.Explorer.Web.Error
                        Pos.Explorer.Web.Doc
                        Pos.Explorer.Web.TestServer
  other-modules:        Pos.Explorer.Aeson.ClientTypes

                        Pos.Explorer.Socket.App
                        Pos.Explorer.Socket.Holder
                        Pos.Explorer.Socket.Methods
                        Pos.Explorer.Socket.Util

                        Pos.Explorer.Web.Server
                        Pos.Explorer.Web.Transform
                        Pos.Explorer.Web.Api
  build-depends:        base
                      , aeson
                      , binary
                      , bytestring
                      , base16-bytestring
                      , cardano-sl
                      , cardano-sl-core
                      , cardano-sl-infra
                      , cardano-sl-db
                      , engine-io
                      , engine-io-snap
                      , exceptions
                      , either
                      , formatting
                      , lens
                      , log-warper
                      , lifted-base
                      , mtl
                      , monad-control
                      , monad-loops
                      , node-sketch
                      , serokell-util
                      , servant
                      , servant-docs
                      , servant-server
                      , socket-io
                      , snap-core
                      , snap-cors
                      , snap-server
                      , engine-io-wai
                      , stm
                      , text-format
                      , text
                      , time
                      , time-units
                      , transformers
                      , universum
                      , unordered-containers
                      , wai
                      , warp
                      , containers
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if flag(asserts)
    cpp-options: -DASSERTS_ON
  if flag(dev-mode)
    cpp-options: -DDEV_MODE

executable cardano-explorer
  hs-source-dirs:      src/explorer
  main-is:             Main.hs
  other-modules:       ExplorerOptions
  build-depends:       base
                     , cardano-sl
                     , cardano-sl-core
                     , cardano-sl-infra
                     , cardano-sl-explorer
                     , optparse-simple
                     , formatting
                     , universum
                     , serokell-util
                     , log-warper
                     , node-sketch
                     , lens
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if flag(dev-mode)
    cpp-options: -DDEV_MODE

executable cardano-explorer-hs2purs
  hs-source-dirs:      src/purescript
  main-is:             Main.hs
  other-modules:       PSTypes
                       PSOptions
  build-depends:       base
                     , cardano-sl
                     , cardano-sl-explorer
                     , purescript-bridge
                     , universum
                     , optparse-simple
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

executable cardano-explorer-docs
  hs-source-dirs:      src/documentation
  main-is:             Main.hs
  other-modules:
  build-depends:       base
                     , cardano-sl
                     , cardano-sl-explorer
                     , purescript-bridge
                     , universum
                     , optparse-simple
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

executable cardano-explorer-mock
  hs-source-dirs:      src/mock
  main-is:             Main.hs
  other-modules:
  build-depends:       base
                     , cardano-sl
                     , cardano-sl-explorer
                     , universum
                     , optparse-simple
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
